DevelopIII/sso/k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: assignment
  name: sso-frontend-guanchen-hou
  labels:
    name: assignment
spec:
  type: ClusterIP
  selector:
    component: sso
    student: guanchen-hou
  ports:
    - port: 3000
      targetPort: 3000
